# webcrawler

./: .env  Dockerfile  README.md  docker-compose.yaml  init_db.sh  my_dags.py  page.py  pyproject.toml
scripts/: run_playstation_crawler.py  run_steam_crawler.py  run_xbox_crawler.py
src/api/: rest.py  schemas.py
src/api/db/: handler.py
src/crawler/: ps_tool.py  steam_tool.py  test.py  tool.py  xbox_tool.py
src/orchestrate/: my_dags.py
src/orchestrate/crawler/: abstract_tool.py  enemy_tool.py  ps_tool.py  steam_tool.py  voxel_tool.py  xbox_tool.py
src/utils/: logger.py
